--- a/ejercicios.html
+++ b/ejercicios.html
@@ -11,8 +11,7 @@
         <h1>Ejercicios Prácticos de Matemáticas</h1>
         <nav>
             <ul>
-                <li><a href="#videos">Videos Educativos</a></li>
-                <li><a href="#articulos">Artículos Semanales</a></li>
+                <li><a href="/videos.html">Videos Educativos</a></li>
                 <li><a href="/recursos.html">Recursos</a></li>
                 <li><a href="/foro.html">Foros</a></li>
                 <li><a href="/pagina.html">Inicio</a> </li>
