--- a/foro.html
+++ b/foro.html
@@ -8,7 +8,6 @@
     <style>
         #nueva-publicacion {
             text-align: center;
-            
         }
         #mensaje {
             width: 50%;
@@ -24,9 +23,9 @@
         <h1>Foro - Tu Sitio Educativo</h1>
         <nav>
             <ul>
-                <li><a href="#articulos">Artículos Semanales</a></li>
-                <li><a href="#ejercicios">Ejercicios Interactivos</a></li>
-                <li><a href="#recursos">Recursos</a></li>
+                <li><a href="/videos.html">Videos Educativos</a></li>
+                <li><a href="/ejercicios.html">Ejercicios Interactivos</a></li>
+                <li><a href="/recursos.html">Recursos</a></li>
                 <li><a href="/pagina.html">Inicio</a> </li>
             </ul>
         </nav>
@@ -57,6 +56,6 @@
     <footer>
         <p>&copy; 2024 Tu Sitio Educativo</p>
     </footer>
-    <script src="script.js"></script> 
+    <script src="/app.js"></script> 
 </body>
 </html>
