--- a/recursos.html
+++ b/recursos.html
@@ -11,8 +11,8 @@
         <h1>Recursos Educativos</h1>
         <nav>
             <ul>
-                <li><a href="#articulos">Artículos Semanales</a></li>
-                <li><a href="#ejercicios">Ejercicios Interactivos</a></li>
+                <li><a href="/videos.html">Videos Educativos</a></li>
+                <li><a href="/ejercicios.html">Ejercicios Interactivos</a></li>
                 <li><a href="/foro.html">Foro</a></li>
                 <li><a href="/pagina.html">Inicio</a> </li>
             </ul>
